<resources>
    <string name="app_name">mysemnanuni</string>
    <string name="semnanuni_text">دانشگاه سمنان</string>
    <string name="into_text_2">نگین خرد ورزی خطه کویر</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="code_version">0.0.1</string>
    <string name="Student_number_text">نام کاربری(کددانشجویی)</string>
    <string name="password_text">رمزعبور</string>
    <string name="login_text">ورود</string>
    <string name="change_password_text">بازیابی رمز عبور</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_password_dialog">تغییر رمز عبور</string>
    <string name="student_number_text">کد دانشجویی</string>
    <string name="new_password_text">رمز عبور جدید</string>
    <string name="change_password_dialog_text">تغییر رمزعبور</string>
    <string name="new_password_change_text">رمزعبور جدید</string>
    <string name="stundent_user_name_dailog">کد دانشجویی</string>
    <string name="my_name_is_salami">نام: ماهان</string>
    <string name="student_family_name">نام خانوادگی:سلامی</string>
    <string name="subject_name">رشته:مهندسی کامپیوتر</string>
    <string name="student_user_name_code">شماره دانشجویی:9811126038</string>
    <string name="nasiri_notif">پیام تبریک رییئس دانشگاه سمنان به مناسبت عید غدیر</string>
    <string name="nasiri_notif2">به گزارش روابط عمومی دانشگاه سمنان دکتر مسعود نصیری عید غدیر خم را تبریک گفت  </string>
    <string name="nasiri_notif3"> سایر اخبار </string>


</resources>