<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_shape_geradiant"
    tools:context=".ui.LoginActivity">
    <ImageView
        android:id="@+id/iv_main_uni_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/into_semnan_uni"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </ImageView>

    <TextView
        android:id="@+id/tv_intro_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="#ffffff"
        android:textSize="29sp"
        app:layout_constraintTop_toBottomOf="@+id/iv_main_uni_logo"
        android:text="@string/semnanuni_text">
    </TextView>

    <TextView
        android:id="@+id/tv_intro_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_intro_text"
        android:text="@string/into_text_2">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guid_middle">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textColor="#ffffff"
            android:textSize="17sp"
            android:textStyle="bold"
            android:text="@string/Student_number_text">
        </TextView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            app:cardCornerRadius="8dp"
            app:cardElevation="16dp"
            android:padding="30dp"
            android:layout_marginTop="20dp">
            <EditText
                android:id="@+id/input_student_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#000000"
                android:layout_marginEnd="10dp"
                android:lines="1"
                android:maxLines="1"
                android:layout_marginStart="10dp"
                >
            </EditText>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textColor="#ffffff"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:text="@string/password_text">
        </TextView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            app:cardCornerRadius="8dp"
            app:cardElevation="16dp"
            android:padding="30dp"
            android:layout_marginTop="20dp">
            <EditText
                android:id="@+id/input_student_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#000000"
                android:layout_marginEnd="10dp"
                android:lines="1"
                android:maxLines="1"
                android:inputType="textPassword"
                android:layout_marginStart="10dp"
                >
            </EditText>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:padding="15dp"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            >
            <Button
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/login_text"
                android:textSize="27sp"
                android:textStyle="bold">
            </Button>
            <TextView
                android:id="@+id/tv_change_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/change_password_text"
                android:textColor="#ffffff"
                android:clickable="true"
                android:textSize="25sp"
                android:textStyle="bold"
                >
            </TextView>
        </LinearLayout>
        <ImageButton
            android:id="@+id/iv_btn_use_finger"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:src="@drawable/ic_baseline_fingerprint_24">
        </ImageButton>
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guid_middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="262dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintGuide_percent="0.40"
        app:layout_constraintTop_toBottomOf="@id/tv_intro_text2"
        />


</androidx.constraintlayout.widget.ConstraintLayout>