<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_shape_geradiant"
    tools:context=".ui.SplashScreenActivity">


    <ImageView
        android:id="@+id/iv_main_uni_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/into_semnan_uni"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </ImageView>

    <TextView
        android:id="@+id/tv_intro_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="#ffffff"
        android:textSize="35sp"
        app:layout_constraintTop_toBottomOf="@+id/iv_main_uni_logo"
        android:text="@string/semnanuni_text">
    </TextView>

    <TextView
        android:id="@+id/tv_intro_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="#ffffff"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_intro_text"
        android:text="@string/into_text_2">
    </TextView>

    <com.tuyenmonkey.mkloader.MKLoader
        android:id="@+id/main_loader"
        android:layout_width="100dp"
        android:layout_height="80dp"
        app:mk_color="@color/black"
        app:mk_type="FishSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_intro_text2"
        app:layout_constraintBottom_toBottomOf="parent">
    </com.tuyenmonkey.mkloader.MKLoader>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_loader"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/code_version"
        android:textSize="24sp"
        android:textColor="#ffffff"
        android:layout_marginTop="30dp"
        android:textStyle="bold">
    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>