<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="8dp"
        app:cardElevation="16dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">
                <EditText
                    android:layout_marginTop="50dp"
                    android:id="@+id/input_student_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:gravity="center"
                    android:hint="@string/stundent_user_name_dailog"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    >
                </EditText>

                <EditText
                    android:layout_marginTop="30dp"
                    android:id="@+id/input_student_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:gravity="center"
                    android:hint="@string/new_password_change_text"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    >
                </EditText>

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change_password_dialog_text"
                    android:textSize="25sp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold">
                </Button>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>





</androidx.constraintlayout.widget.ConstraintLayout>