<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/main_shape_geradiant"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp"
            android:padding="10dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <ImageView
                android:id="@+id/iv_notif"
                android:src="@drawable/nasi"
                android:layout_width="match_parent"
                android:layout_height="200dp">

            </ImageView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="16dp"
                app:cardCornerRadius="8dp"
                android:background="@drawable/box_shadow_gradiant">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/tv_notif"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nasiri_notif"
                        android:textColor="#ffffff"
                        android:background="@drawable/box_shadow_gradiant"
                        android:textSize="22sp"
                        android:textStyle="bold">
                    </TextView>

                    <TextView
                        android:id="@+id/tv_notif2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nasiri_notif2"
                        android:background="@drawable/box_shadow_gradiant"
                        android:textColor="#ffffff"
                        android:textSize="15sp"
                        android:textStyle="bold">
                    </TextView>
                </LinearLayout>


            </androidx.cardview.widget.CardView>
            </LinearLayout>




        </androidx.cardview.widget.CardView>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nasiri_notif3"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:layout_gravity="end"
            android:textStyle="bold">
        </TextView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            app:cardCornerRadius="16dp"
            android:layout_margin="10dp"

            app:cardElevation="8dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            app:cardCornerRadius="16dp"
            android:layout_margin="10dp"

            app:cardElevation="8dp">
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_margin="10dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp">
        </androidx.cardview.widget.CardView>





    </LinearLayout>







</FrameLayout>