<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/main_shape_geradiant"
    tools:context="ui.NotifictionFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#2A2B2B"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="8dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:cardElevation="16dp"
            android:clickable="true"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/iv_student_salami"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginEnd="10dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/student_salami"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                    app:strokeWidth="2dp">
                </com.google.android.material.imageview.ShapeableImageView>

                <TextView
                    android:id="@+id/tv_student_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/my_name_is_salami"
                    android:textColor="#ffffff"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toStartOf="@+id/iv_student_salami"
                    app:layout_constraintTop_toTopOf="parent">
                </TextView>


                <TextView
                    android:id="@+id/tv_student_family"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/student_family_name"
                    android:textColor="#ffffff"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="@id/tv_student_name"
                    app:layout_constraintEnd_toStartOf="@id/tv_student_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tv_student_name">
                </TextView>

                <TextView
                    android:id="@+id/tv_student_subject"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/subject_name"
                    android:textColor="#ffffff"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="@id/tv_student_name"
                    app:layout_constraintTop_toBottomOf="@+id/tv_student_name">
                </TextView>


                <TextView
                    android:id="@+id/tv_student_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/student_user_name_code"
                    android:textColor="#ffffff"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="@id/tv_student_name"
                    app:layout_constraintTop_toBottomOf="@+id/tv_student_subject">
                </TextView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guid_middle"
            app:layout_constraintBottom_toBottomOf="parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:padding="15dp"

                app:layout_constraintTop_toBottomOf="@id/guid_middle"
                android:orientation="vertical">
                <androidx.cardview.widget.CardView
                    android:id="@+id/card_score"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    app:cardElevation="16dp"
                    android:clickable="true"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="12dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:src="@drawable/sabtnomarat">
                        </ImageView>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:gravity="center"
                            android:textStyle="bold"
                            android:layout_gravity="center"
                            android:text="دفترچه نمرات">
                        </TextView>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    app:cardElevation="16dp"
                    android:layout_margin="10dp"
                    android:clickable="true"

                    app:cardCornerRadius="12dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:src="@drawable/smart">
                        </ImageView>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:gravity="center"
                            android:textStyle="bold"
                            android:layout_gravity="center"
                            android:text="امور استعدادهای درخشان">
                        </TextView>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    app:cardElevation="16dp"
                    android:clickable="true"

                    android:layout_margin="10dp"

                    app:cardCornerRadius="12dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:src="@drawable/graduatestudent">
                        </ImageView>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:gravity="center"
                            android:textStyle="bold"
                            android:layout_gravity="center"
                            android:text="امورفارغ التحصیلان">
                        </TextView>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    app:cardElevation="16dp"
                    android:layout_margin="10dp"
                    android:clickable="true"

                    app:cardCornerRadius="12dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:src="@drawable/teacherprofile">
                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start|center"
                            android:gravity="center"
                            android:text="پروفایل استاید"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold">
                        </TextView>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    app:cardElevation="16dp"
                    android:clickable="true"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="12dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:src="@drawable/resoucreofbooks">
                        </ImageView>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:gravity="center"
                            android:textStyle="bold"
                            android:layout_gravity="center"
                            android:text="منابع دروس">
                        </TextView>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guid_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.23"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>



</FrameLayout>